openshift/dc.yml
apiVersion: "apps.openshift.io/v1"
kind: "DeploymentConfig"
metadata:
  annotations:
    app.quarkus.io/build-timestamp: "2020-05-04 - 10:48:28 +0000"
    app.openshift.io/vcs-url: "<<unknown>>"
    app.quarkus.io/commit-id: "2db4d37e7d8ed5107b71f920c668914f793db6ba"
  labels:
    app.kubernetes.io/name: "component-upgrade-logger-jvm"
    app.kubernetes.io/version: "1.0.0-SNAPSHOT"
    app.openshift.io/runtime: "quarkus"
  name: "component-upgrade-logger-jvm"
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: "component-upgrade-logger-jvm"
    app.kubernetes.io/version: "1.0.0-SNAPSHOT"
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: "2020-05-04 - 10:48:28 +0000"
        app.openshift.io/vcs-url: "<<unknown>>"
        app.quarkus.io/commit-id: "2db4d37e7d8ed5107b71f920c668914f793db6ba"
      labels:
        app.kubernetes.io/name: "component-upgrade-logger-jvm"
        app.kubernetes.io/version: "1.0.0-SNAPSHOT"
        app.openshift.io/runtime: "quarkus"
    spec:
      containers:
        - env:
            - name: "KUBERNETES_NAMESPACE"
              valueFrom:
                fieldRef:
                  fieldPath: "metadata.namespace"
            - name: "JAVA_APP_JAR"
              value: "/deployments/component-upgrade-logger-1.0.0-SNAPSHOT-runner.jar"
          image: "images.paas.redhat.com/thofman/component-upgrade-logger-jvm:latest"
          imagePullPolicy: "Always"
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: "/health/live"
              port: 8080
              scheme: "HTTP"
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: "component-upgrade-logger-jvm"
          ports:
            - containerPort: 8080
              name: "http"
              protocol: "TCP"
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: "/health/ready"
              port: 8080
              scheme: "HTTP"
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - "component-upgrade-logger-jvm"
        from:
          kind: "ImageStreamTag"
          name: "component-upgrade-logger-jvm:latest"
      type: "ImageChange"
