openshift/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: component-upgrade-logger
  labels:
    app: component-upgrade-logger
  annotations: {}
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: component-upgrade-logger
  template:
    metadata:
      labels:
        deployment: component-upgrade-logger
    spec:
      containers:
        - name: component-upgrade-logger
          image: images.paas.redhat.com/thofman/component-upgrade-logger:native-1.0.0-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 40Mi
            requests:
              cpu: 50m
              memory: 20Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
